fixed the spacing of the columns on the dashboard handlebars with CSS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,5 +60,18 @@
 
 img {
     height: 250px;
-    max-width: 100%
+    max-width: 100%;
 }
+
+.column {
+    margin-right: 4rem;
+    margin-left: 4rem;
+  }
+  
+  .column:first-child {
+    margin-left: -7;
+  }
+  
+  .column:last-child {
+    margin-right: -7;
+  }
